<resources>
    <string name="app_name">Calculator</string>
    <string name="main_null">0</string>
    <string name="click_clear">AC</string>
    <string name="click_plus_or_minus">+/-</string>
    <string name="click_percent">%</string>
    <string name="click_divide">/</string>
    <string name="click_seven">7</string>
    <string name="click_eight">8</string>
    <string name="click_nine">9</string>
    <string name="click_multiplication">x</string>
    <string name="click_four">4</string>
    <string name="click_five">5</string>
    <string name="click_six">6</string>
    <string name="click_minus">-</string>
    <string name="click_one">1</string>
    <string name="click_two">2</string>
    <string name="click_three">3</string>
    <string name="click_plus">+</string>
    <string name="click_null">0</string>
    <string name="click_dot">.</string>
    <string name="click_equals">=</string>
    <string name="policies">Policies</string>
    <string name="policy">Policy</string>
    <string name="product_category">Product Category</string>
    <string name="origin_country">Origin Country</string>
    <string name="brand">Brand</string>
    <string name="current_policies">Current Policies</string>
    <string name="export_as_csv">Export as CSV</string>
    <string name="btn_click">Click</string>
</resources>