<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">
    
    <FrameLayout
        app:layout_constraintBottom_toTopOf="@id/conteiner"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/text_view"
            android:layout_gravity="end|bottom"
            android:layout_marginHorizontal="34dp"
            android:textColor="@color/white"
            android:textSize="80dp"
            android:text="@string/main_null"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/conteiner"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/btn_AC"
                style="@style/Grey.Button"
                android:text="@string/click_clear"/>

            <com.google.android.material.button.MaterialButton
                android:layout_marginHorizontal="18dp"
                style="@style/Grey.Button"
                android:text="@string/click_plus_or_minus"/>

            <com.google.android.material.button.MaterialButton
                android:layout_marginEnd="18dp"
                style="@style/Grey.Button"
                android:textSize="28sp"
                android:text="@string/click_percent"/>

            <com.google.android.material.button.MaterialButton
                android:onClick="onOperationClick"
                android:id="@+id/btn_divide"
                style="@style/Orange.Button"
                android:text="@string/click_divide"/>

        </LinearLayout>

        <LinearLayout
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/btn_seven"
                style="@style/Grey.Dark.Button"
                android:text="@string/click_seven"/>

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/btn_eight"
                android:layout_marginHorizontal="18dp"
                style="@style/Grey.Dark.Button"
                android:text="@string/click_eight"/>

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/btn_nine"
                android:layout_marginEnd="18dp"
                style="@style/Grey.Dark.Button"
                android:textSize="28sp"
                android:text="@string/click_nine"/>

            <com.google.android.material.button.MaterialButton
                android:onClick="onOperationClick"
                android:id="@+id/btn_multiple"
                style="@style/Orange.Button"
                android:text="@string/click_multiplication"/>

        </LinearLayout>

        <LinearLayout
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/btn_four"
                style="@style/Grey.Dark.Button"
                android:text="@string/click_four"/>

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/btn_five"
                android:layout_marginHorizontal="18dp"
                style="@style/Grey.Dark.Button"
                android:text="@string/click_five"/>

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/btn_six"
                android:layout_marginEnd="18dp"
                style="@style/Grey.Dark.Button"
                android:textSize="28sp"
                android:text="@string/click_six"/>

            <com.google.android.material.button.MaterialButton
                android:onClick="onOperationClick"
                android:id="@+id/btn_minus"
                style="@style/Orange.Button"
                android:text="@string/click_minus"/>

        </LinearLayout>

        <LinearLayout
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/btn_one"
                style="@style/Grey.Dark.Button"
                android:text="@string/click_one"/>

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/btn_two"
                android:layout_marginHorizontal="18dp"
                style="@style/Grey.Dark.Button"
                android:text="@string/click_two"/>

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/btn_three"
                android:layout_marginEnd="18dp"
                style="@style/Grey.Dark.Button"
                android:textSize="28sp"
                android:text="@string/click_three"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus"
                android:onClick="onOperationClick"
                style="@style/Orange.Button"
                android:text="@string/click_plus"/>

        </LinearLayout>

        <LinearLayout
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/btn_null"
                android:paddingEnd="0dp"
                android:paddingStart="30dp"
                android:textAlignment="textStart"
                android:layout_width="176dp"
                style="@style/Grey.Dark.Button"
                android:text="@string/click_null"/>

            <com.google.android.material.button.MaterialButton
                android:layout_marginHorizontal="18dp"
                style="@style/Grey.Dark.Button"
                android:text="@string/click_dot"/>

            <com.google.android.material.button.MaterialButton
                android:onClick="onOperationClick"
                android:id="@+id/btn_equal"
                style="@style/Orange.Button"
                android:text="@string/click_equals"/>

        </LinearLayout>




    </LinearLayout>
    
    <Button
        android:onClick="onButtonClick"
        android:visibility="invisible"
        android:id="@+id/btn_click"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:text="@string/btn_click"
        android:backgroundTint="@color/pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="100dp"
        android:layout_height="50dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>