<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    tools:context=".SecondActivity">

    <LinearLayout
        android:id="@+id/main_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu"
            app:tint="@color/white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="150dp"
            android:paddingEnd="150dp"
            android:src="@drawable/ic_volcano"
            app:tint="@color/pink" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search"
            app:tint="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_view_policies"
        style="@style/Base.TextView"
        android:text="@string/policies"
        app:layout_constraintBottom_toTopOf="@id/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_linear_layout" />

    <LinearLayout
        android:id="@+id/enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_policies">

        <com.google.android.material.button.MaterialButton
            style="@style/Second.Button"
            android:text="@string/policy" />

        <com.google.android.material.button.MaterialButton
            style="@style/Second.Button"
            android:text="@string/product_category" />

        <com.google.android.material.button.MaterialButton
            style="@style/Second.Button"
            android:text="@string/origin_country" />

        <com.google.android.material.button.MaterialButton
            style="@style/Second.Button"
            android:text="@string/brand" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_view_current_policies"
        style="@style/Base.TextView"
        android:text="@string/current_policies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter" />

    <com.google.android.material.button.MaterialButton
        android:onClick="onClickExit"
        android:id="@+id/btn_export"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/pink"
        android:text="@string/export_as_csv"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_current_policies" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_export" />

</androidx.constraintlayout.widget.ConstraintLayout>